feat: :sparkles: Adding the categorias CRUD
